# final-project

./: .gitignore  .python-version  MLproject  README.md  pyproject.toml  python_env.yaml
dagster_home/: dagster.yaml
recommender_system/: pyproject.toml
recommender_system/dagster_models/: keras_dot_product_model.keras
recommender_system/mlruns/0/: meta.yaml
recommender_system/mlruns/342937375622513856/: meta.yaml
recommender_system/mlruns/342937375622513856/0d19c39f03874619a2d0203893291bc1/: meta.yaml
recommender_system/mlruns/342937375622513856/1834ec22dab04ebd87c042414acd346f/: meta.yaml
recommender_system/mlruns/342937375622513856/289e931026db47d5990e0798a6c84c10/: meta.yaml
recommender_system/mlruns/342937375622513856/5170294a621d45908b7fd5b536f9e737/: meta.yaml
recommender_system/mlruns/342937375622513856/5f678d671cfb42ceb0ade9230cb0e167/: meta.yaml
recommender_system/mlruns/342937375622513856/b9e43a0c499e44ef978ef193c2b40ba9/: meta.yaml
recommender_system/mlruns/342937375622513856/fe0b2f0485a54380b2d4da9ee6e8fa32/: meta.yaml
recommender_system/mlruns/models/keras_dot_product_model/: meta.yaml
recommender_system/recommender_system/: __init__.py  configs.py  dbt_resource.py  definitions.py  project.py
recommender_system/recommender_system.egg-info/: PKG-INFO
recommender_system/recommender_system/assets/: __init__.py
recommender_system/recommender_system/assets/dbt/: dbt_assets.py
recommender_system/recommender_system/assets/recommender/: model_helper.py  train_model.py
recommender_system/recommender_system/resources/: __init__.py
(+408 files in other folders)
