[project]
name = "final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Bajik",email = "danielbajik@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlflow[mlserver] (>=2.20.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dagster (==1.9.1)",
    "dagster-mlflow (==0.25.1)",
    "tensorflow (==2.18.0)",
    "dagster-airbyte (==0.25.1)",
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
